--- a/templates/_base.html
+++ b/templates/_base.html
@@ -8,8 +8,8 @@
         <!-- Le styles -->
         <link href="static/css/bootstrap.css" rel="stylesheet">
         {% block stylesheets %}
-        <link href="static/css/screen.css" rel="stylesheet" media="screen">
-        <link href="static/css/print.css" rel="stylesheet" media="print">
+        <link href="static/stylesheets/screen.css" rel="stylesheet" media="screen">
+        <link href="static/stylesheets/print.css" rel="stylesheet" media="print">
         {% endblock %}
     </head>
     <body>
