--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,30 @@
 {% extends "_base.html" %}
 
 {% block body %}
-<h1>Hello world</h1>
-<p>{{ lipsum() }}</p>
+<div id="chooser">
+    <h1>Vote for your favorite piece</h1>
+    <ul id="items">
+        <li>
+            <div class="item">
+                <img src="">
+                <p>Item 1</p>
+            </div>
+        </li>
+        <li>
+            <div class="item">
+                <img src="">
+                <p>Item 2</p>
+            </div>
+        </li>
+        <li>
+            <div class="item">
+                <img src="">
+                <p>Item 3</p>
+            </div>
+        </li>
+    </ul>
+    <!-- need to get email here -->
+    <div class="facebook">
+    </div>
+</div>
 {% endblock %}
