--- a/templates/_base.html
+++ b/templates/_base.html
@@ -13,6 +13,8 @@
         {% endblock %}
     </head>
     <body>
+        {% block topbar %}
+        {% endblock %}
         {% block body %}
         {% endblock %}
         {% block js %}
