--- a/static/sass/screen.sass
+++ b/static/sass/screen.sass
@@ -5,21 +5,47 @@
 
 @import "compass/utilities/lists/horizontal-list"
 
+body
+    background: #f7f5f5 url(http://passets-ec.pinterest.com/images/paper.jpg) repeat
+
 #chooser
+    background-color: white
+    margin: 20px
     border: gray 1px solid
     border-radius: 5px
     width: 800px
+    padding: 20px
 
 #items
     +horizontal-list
     width: 100%
 
     li
+        height: 350px
         width: 33%
         margin: 0
         padding: 0
 
+        img
+            background-color: gray
+            max-width: 100%
+            max-height: 75%
+            display: block
+            margin: 0 auto
+
 .item
     border: gray 1px solid
     border-radius: 5px
+    margin: 5px
     padding: 10px
+
+    &:hover
+        border-color: #0088cc
+        box-shadow: 0 1px 4px rgba(0, 105, 214, 0.25)
+        cursor: pointer
+
+.selected
+    border-color: #00cc88
+
+.image
+    background-color: #f2f0f0
